--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -7,7 +7,7 @@
   height: 370px;
   object-fit: cover;
 }
-.hero_text {
+.heroTtext {
   font-weight: bolder;
   position: absolute;
   top: 100px;
@@ -15,12 +15,12 @@
   color: #f4f4f4;
 }
 
-.hero_text h1 {
+.heroTtext h1 {
   font-size: 42px;
   letter-spacing: 1px;
 }
 
-.hero_text p {
+.heroTtext p {
   font-family: "bpgWeb001", sans-serif;
   font-size: 34px;
   letter-spacing: 1.5px;
