--- a/src/components/Courses/CourseCard.css
+++ b/src/components/Courses/CourseCard.css
@@ -33,18 +33,18 @@
   font-weight: 300;
 }
 
-.card_Link {
+.cardLink {
   display: flex !important;
   align-items: center;
   gap: 10px;
 }
 
-.cardLlink a {
+.cardLink a {
   font-size: 16px;
   color: #06b0f3;
   text-decoration: none;
 }
 
-.card_link i {
+.cardLink i {
   color: #06b0f3;
 }
