--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,9 +1,9 @@
-.about_area {
+.aboutAarea {
   padding: 50px 16%;
   background-color: #2b2b2b;
 }
 
-.about_area h1 {
+.aboutAarea h1 {
   padding: 20px 0px;
   color: #f4f4f4;
   font-size: 28px;
@@ -12,7 +12,7 @@
   font-weight: 350;
 }
 
-.about_area a {
+.aboutAarea a {
   font-size: 20px;
   font-weight: bold;
   color: #06b0f3;
