--- a/src/components/Faq/Faq.css
+++ b/src/components/Faq/Faq.css
@@ -39,3 +39,31 @@
 .faqAnswer {
   white-space: pre-line;
 }
+
+@media screen and (max-width: 600px) {
+  .faq {
+    padding: 30px 10px;
+  }
+  .faq h1,
+  .faqQuestion,
+  .faqAnswer {
+    font-size: 14px;
+  }
+  .faq a {
+    font-size: 12px;
+  }
+}
+
+@media screen and (min-width: 600px) and (max-width: 850px) {
+  .faq {
+    padding: 30px;
+  }
+  .faq h1,
+  .faqQuestion,
+  .faqAnswer {
+    font-size: 18px;
+  }
+  .faq a {
+    font-size: 14px;
+  }
+}
