Done responsive design on all resolution

--- a/src/components/Courses/Courses.css
+++ b/src/components/Courses/Courses.css
@@ -23,7 +23,7 @@
   }
 }
 
-@media screen and (min-width: 600px) and (max-width: 850px) {
+@media screen and (min-width: 600px) and (max-width: 935px) {
   .coursesContainer > p {
     text-align: center;
     font-size: 26px;
@@ -31,4 +31,7 @@
   .cardsContainer {
     justify-content: center;
   }
+}
+
+@media screen and (min-width: 850px) and (max-width: 1024px) {
 }
