--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -42,3 +42,12 @@
     font-size: 22px;
   }
 }
+
+@media screen and (min-width: 850px) and (max-width: 1024px) {
+  .aboutArea {
+    padding: 5px 30px;
+  }
+  .aboutArea h1 {
+    font-size: 32px;
+  }
+}
