--- a/src/components/Faq/Faq.css
+++ b/src/components/Faq/Faq.css
@@ -40,6 +40,12 @@
   white-space: pre-line;
 }
 
+.faqHeader a:hover {
+  color: #aaaaaa;
+  transition-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  transition-duration: 300ms;
+}
+
 @media screen and (max-width: 600px) {
   .faq {
     padding: 30px 10px;
